# ExpertBase

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  Taskfile.yml  package.json
.claude/: .gitignore  settings.json
backend/: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  main.py  pyproject.toml
backend/tests/: test_main.py
docs/: .gitignore  ARCHITECTURE.md
docs/research/: 2026-07-11-agent-mcp-and-skills.md  2026-07-12-architecture-watchlist.md
docs/superpowers/plans/: 2026-06-12-desktop-architecture.md  2026-06-14-local-core-mvp.md  2026-06-22-workshop-review-fixes.md  2026-06-24-workshop-ai-streaming-feedback.md  2026-06-24-workshop-thinking-stream.md  2026-06-26-workshop-rig-migration.md  2026-06-29-drop-capture-fold-into-workshop.md  2026-06-30-latex-markdown-rendering.md  2026-06-30-workshop-conversation-history.md  2026-06-30-workshop-escape-stop.md  2026-07-01-agent-provider-decoupling.md  2026-07-01-backend-error-i18n.md  2026-07-13-agent-skills.md
docs/superpowers/specs/: 2026-06-12-desktop-architecture-design.md  2026-06-13-local-core-mvp-design.md  2026-06-14-fsd-ddd-restructure-design.md  2026-06-24-workshop-thinking-stream-design.md  2026-06-26-workshop-rig-migration-design.md  2026-06-29-drop-capture-fold-into-workshop-design.md  2026-06-30-latex-markdown-rendering-design.md  2026-06-30-workshop-escape-stop-design.md  2026-07-01-agent-provider-decoupling-design.md  2026-07-01-backend-error-i18n-design.md  2026-07-13-agent-skills-design.md
frontend/: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  Taskfile.yml  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/components/: providers.tsx
frontend/src/lib/: nav.ts
frontend/src/lib/data/: adapt.ts  (+4 more)
infra/: .gitignore  AGENTS.md  README.md  Taskfile.yml  compose.development.yml  compose.production.yml
infra/env/: development.env.example  production.env.example
scripts/: kb-pipeline.mjs  kb-pipeline.test.mjs  workshop-process-state.test.mjs
src-tauri/: AGENTS.md  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: ai.rs  capture.rs  error.rs  kb.rs  lib.rs  main.rs  workshop.rs
src-tauri/src/agent/: domain.rs  interface.rs  mod.rs
src-tauri/src/agent/infrastructure/: mod.rs  ollama.rs  openai_compat.rs  runner.rs  settings_store.rs
src-tauri/src/ai/: agent.rs  claude.rs  domain.rs  interface.rs  mod.rs  ollama.rs
src-tauri/src/ai/infrastructure/: mod.rs  ollama.rs
src-tauri/src/asr/: application.rs  domain.rs  interface.rs  mod.rs
src-tauri/src/asr/infrastructure/: mod.rs  model_store.rs  whisper.rs
src-tauri/src/capture/: application.rs  doc.rs  domain.rs  interface.rs  mod.rs  web.rs
src-tauri/src/capture/infrastructure/: mod.rs  web.rs
src-tauri/src/extract/: mod.rs
src-tauri/src/extract/infrastructure/: mod.rs  web.rs
src-tauri/src/kb/: application.rs  index.rs  interface.rs  mod.rs  store.rs
src-tauri/src/kb/domain/: entry.rs  material.rs  mod.rs  registry.rs
src-tauri/src/kb/infrastructure/: config_store.rs  index.rs  mod.rs  store.rs
src-tauri/src/plugin/: domain.rs  interface.rs  mod.rs
src-tauri/src/plugin/infrastructure/: activate_skill.rs  mod.rs  scan.rs
src-tauri/src/workshop/: application.rs  domain.rs  interface.rs  mod.rs  prompt.rs
src-tauri/src/workshop/infrastructure/: confirm.rs  history.rs  mod.rs  rig_agent.rs  tools.rs  web_search.rs
src-tauri/src/workshop/infrastructure/tools/: kb_read.rs  kb_write.rs  mod.rs  source.rs  web.rs
(+137 files in other folders)
