[package]
name = "expert-base"
version = "0.1.0"
description = "Expert Base desktop application"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "expert_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
sha2 = "0.10"
dom_smoothie = "0.18"
htmd = "0.5"
pdf-extract = "0.10"
dotext = "0.1"
# 転写エンジン（whisper.cpp）。ネイティブビルドに cmake が要るため、optional feature の裏に置く。
whisper-rs = { version = "0.16", optional = true }
hound = { version = "3", optional = true }
tauri-plugin-dialog = "2.7.1"

[features]
# 既定は OFF（cmake 無しでも cargo test が通る）。実アプリのビルドでは有効化する。
whisper = ["dep:whisper-rs", "dep:hound"]

[dev-dependencies]
tempfile = "3"
